<resources>
    <string name="app_name">Around Tâmega e Sousa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_application_id" translatable="false">1462407480534175</string>
    <string name="facebook_app_id">1462407480534175</string>
    <string name="add_point">Adicionar Ponto</string>
    <string name="action_settings">Definições</string>
    <string name="mypoints">Adicionados</string>
    <string name="favourites">Favoritos</string>
    <string name="nav_interest_points">Pontos de Interesse</string>
    <string name="interest_points">Lista</string>
    <string name="map">Mapa</string>
    <string name="nav_mypoints">Os Meus Pontos</string>
    <string name="logout">Log Out</string>

    <string name="reset">Reset</string>
    <string name="check">Check</string>
    <string name="save_place">Selecionar</string>
    <string name="close">Check</string>

    <string name="options">Opções</string>


    <!-- Sim e Nao-->
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <!-- Title -->
    <string name="title_activity_add_point">Adicionar Ponto</string>
    <string name="title_activity_map_picker">Selecionar localização</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_fragment_map">Mapa</string>
    <string name="title_fragment_list">Pontos de Interesse</string>
    <string name="title_fragment_list_favo">Favoritos</string>
    <string name="title_fragment_list_my_points">Os Meus Pontos</string>
    <string name="title_fragment_poi">Ponto de Interesse</string>
    <string name="title_dialog_city">Indique o Concelho</string>
    <string name="title_notification_add_point">Adicionar Ponto de Interesse</string>


    <!-- Menu do poi-->
    <string name="edit_poi">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="google_maps">Ir para o Google Maps</string>
    <string name="add_favorites">Adicionar aos Favoritos</string>
    <string name="remove_favorites">Remover dos Favoritos</string>

    <!-- dialog eliminar poi-->
    <string name="delete_poi_title">Eliminar Ponto de Interesse</string>
    <string name="delete_poi_text">Pretende eliminar o ponto de interesse?</string>

    <!-- Warnings -->
    <string name="warn_permission_dennied">Permissões negadas</string>
    <string name="warn_location_disable">Localização desligada</string>
    <string name="warn_map_not_inside">Não percente ao Tâmega e Sousa</string>
    <string name="warn_location_not_defined">Localização não definida</string>
    <string name="warn_login_unknown_error">Erro desconhecido</string>
    <string name="warn_login_unknown_response">Resposta desconhecida</string>
    <string name="warn_login_no_connection">Sem ligação à internet</string>
    <string name="warn_params_not_fulfilled">Preencha todos os parametros</string>

    <!-- Messages -->
    <string name="message_submit_point">Deseja adicionar o ponto de interesse?</string>
    <string name="message_submit_point_yes">Adicionar</string>
    <string name="message_submit_point_no">Voltar</string>
    <string name="message_dialog_city">Não foi possivel determinar o seu concelho com precisão</string>
    <string name="message_notification_added">Ponto de interesse adicionado</string>
    <string name="message_notification_not_added">Falha ao adicionar ponto de interesse!</string>
    <string name="message_notification_not_added_database">Falha ao adicionar o ponto à base de dados!</string>
    <string name="message_notification_not_added_upload">Falha no upload das imagens, ponto não adicionado!</string>

    <string name="message_toast_restart_service">O serviço será recomeçado brevemente</string>
    <string name="message_toast_open_poi"> A abrir Ponto de Interesse</string>


    <string name="text_image">Imagem</string>
    <string name="text_file_not_found">O ficheiro não existe</string>

    <string name="error_image">Erro ao carregar a imagem</string>
    <string name="classificate_poi">Classificar Ponto de Interesse</string>

    <string name="apply">Aplicar</string>
    <string name="cancel">Cancelar</string>


    <string name="hate">Detestei</string>
    <string name="bad">Mau</string>
    <string name="medium">Razoável</string>
    <string name="like">Gostei</string>
    <string name="love">Adorei</string>

    <string name="remove_poi_success">Ponto de interesse removido</string>
    <string name="remove_poi_unsuccess">Não foi possivel remover ponto de interesse</string>

    <string name="classificate_added">Classificação adicionada</string>
    <string name="classificate_not_added">Não foi possivel classificar ponto de interese</string>

    <string name="classficate_changed">Classificação alterada</string>
    <string name="classificate_not_changged">Não foi posssivel alterar classificação</string>


    <string name="add_to_favorites">Adicionado aos Favoritos</string>
    <string name="not_add_to_favorites">Não foi possivel adicionar aos Favoritos</string>

    <string name="remove_from_favorites">Removido dos Favoritos</string>
    <string name="not_remove_from_favorites">Não foi possivel remover dos Favorites</string>


    <string name="pre_settings">Pretende aplicar as definções predefinidas ?</string>
    <string name="predefinitions">Predefinições</string>

    <string name="error">Erro ao recebr informação</string>



    <string name="header_filters">Filtro</string>


    <string-array name="type_of_location">
        <item>@string/value_any_local</item>

        <item>Parque</item>
        <item>Jardim</item>
        <item>Praia fluvial</item>
        <item>Monumento</item>
        <item>Igreja</item>
        <item>Restaurante</item>
        <item>Outro</item>
    </string-array>


    <string-array name="cores">
        <item>Verde Claro</item>
        <item>Verde Escuro</item>
        <item>Castanho</item>
        <item>Azul</item>
    </string-array>
    <string-array name="type_of_location_add">
        <item>Parque</item>
        <item>Jardim</item>
        <item>Praia fluvial</item>
        <item>Monumento</item>
        <item>Igreja</item>
        <item>Restaurante</item>
        <item>Outro</item>

    </string-array>

    <string name="filter_in">em</string>

    <string-array name="cities">
        <item>@string/value_any_city</item>


        <item>Amarante</item>
        <item>Baião</item>
        <item>Castelo de Paiva</item>
        <item>Celorico de Basto</item>
        <item>Cinfães</item>
        <item>Felgueiras</item>
        <item>Lousada</item>
        <item>Marco de Canaveses</item>
        <item>Paços de Ferreira</item>
        <item>Penafiel</item>
        <item>Resende</item>
    </string-array>


    <string-array name="sort_by">
        <item>@string/sort_by_date</item>
        <item>@string/sort_by_rating</item>

    </string-array>

    <string name="value_any_local">Todos os Tipos de Local</string>
    <string name="value_any_city">Todos os Concelhos</string>

    <!--    <string name="label_category">Tipo de Local</string>
        <string name="label_city">Concelho</string>
        <string name="label_price">Rating</string>
        <string name="label_sort_by">Ordenado por</string>-->

    <string name="fmt_num_ratings" translatable="false">(%d)</string>
    <string name="all_points">Todos os Pontos</string>
    <string name="search">Pesquisar</string>

    <string name="sort_by_rating">Ordenar por Rating</string>
    <string name="sort_by_date">Ordenar por Data</string>

    <string name="sorted_by_rating">Ordenado por rating</string>
    <string name="sorted_by_date">Ordenado por data</string>


</resources>
