<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mypoints"
            android:title="@string/nav_mypoints">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/mypoints"
                        android:icon="@drawable/ic_menu_camera"
                        android:title="@string/mypoints" />
                    <item
                        android:id="@+id/favourites"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/favourites" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/nav_interest_points"
            android:title="@string/nav_interest_points">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/interest_points"
                        android:icon="@drawable/ic_menu_slideshow"
                        android:title="@string/interest_points" />
                    <item
                        android:id="@+id/map"
                        android:icon="@drawable/ic_menu_manage"
                        android:title="@string/map" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/logout"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/logout" />


    </group>
</menu>
