<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/AppTheme.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/header_filters" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon_type"
                style="@style/AppTheme.FilterIcon"
                android:layout_centerVertical="true"
                android:tint="@color/greySecondary"
                app:srcCompat="@drawable/ic_beach" />

            <Spinner
                android:id="@+id/spinner_tof"
                style="@style/AppTheme.FilterSpinner"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/icon_type"

                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon_city"
                style="@style/AppTheme.FilterIcon"
                android:layout_centerVertical="true"
                android:tint="@color/greySecondary"
                app:srcCompat="@drawable/ic_city" />

            <Spinner
                android:id="@+id/spinner_city"
                style="@style/AppTheme.FilterSpinner"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/icon_city" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/spinner_parent"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon_sort"
                style="@style/AppTheme.FilterIcon"
                android:layout_centerVertical="true"
                android:tint="@color/greySecondary"
                app:srcCompat="@drawable/ic_list" />

            <Spinner
                android:id="@+id/spinner_sort"
                style="@style/AppTheme.FilterSpinner"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/icon_sort" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_cancel"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/greySecondary"
                android:theme="@style/ThemeOverlay.FilterButton" />


            <Button
                android:id="@+id/button_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apply"
                android:theme="@style/ThemeOverlay.FilterButton" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>